--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "date-fns": "^4.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "ical": "^0.8.0",
+    "ical-generator": "^8.0.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "readline": "^1.3.0",
     "webuntis": "^2.2.1"
   }
 }
